RESOLVED FIXED68782
DFG JIT Construct opcode takes a this argument even though it's not passed
https://bugs.webkit.org/show_bug.cgi?id=68782
Summary DFG JIT Construct opcode takes a this argument even though it's not passed
Filip Pizlo
Reported 2011-09-25 16:15:52 PDT
The DFG JIT Construct implementation initially involved passing a this argument to the Construct node, and then the implementation of the Construct node would pass this argument. This was unnecessary, since Constructors create their own this argument. This was then half fixed: the Constructor node implementation stopped passing the this argument. But there is still a node generated for getting the this argument, and it is still a child of Construct. This leads to dead code, is confusing to reason about, and probably hurts performance.
Attachments
the patch (4.37 KB, patch)
2011-09-25 16:35 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2011-09-25 16:35:35 PDT
Created attachment 108617 [details] the patch
Filip Pizlo
Comment 2 2011-09-25 17:00:41 PDT
Landed in r95927.
Note You need to log in before you can comment on or make changes to this bug.